Try to fix buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
   pre_build:
     commands:
       # run 'npm install' using versions in package-lock.json
+      - npm cache clear --force
       - npm ci
   build:
     commands:
