--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,4 @@
 version: 0.2
-
 phases:
   install:
     runtime-versions:
@@ -7,8 +6,7 @@ phases:
   pre_build:
     commands:
       # run 'npm install' using versions in package-lock.json
-      # - npm ci
-      - npm install
+      - npm ci
   build:
     commands:
       - npm run build
