--- a/main.yml
+++ b/main.yml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
   EC2InstanceType:
@@ -22,10 +22,14 @@ Parameters:
   GitHubPersonalAccessToken:
     Type: String
     NoEcho: true
-    Description: 'A GitHub personal access token with "repo" and "admin:repo_hook" permissions.'
+    Description: 'A GitHub personal access token with "repo" and
+"admin:repo_hook" permissions.'
+
+
 Resources:
+
   SecurityGroup:
-    Type: 'AWS::EC2::SecurityGroup'
+    Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupDescription: !Sub 'Internal Security group for ${AWS::StackName}'
       SecurityGroupIngress:
@@ -41,15 +45,15 @@ Resources:
         - Key: Name
           Value: !Ref AWS::StackName
   InstanceRole:
-    Type: 'AWS::IAM::Role'
+    Type: "AWS::IAM::Role"
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           Effect: Allow
           Principal:
             Service:
-              - 'ec2.amazonaws.com'
+              - "ec2.amazonaws.com"
           Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchFullAccess
@@ -61,7 +65,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           Effect: Allow
           Principal:
@@ -178,43 +182,45 @@ Resources:
       TargetPipelineVersion: !GetAtt Pipeline.Version
       RegisterWithThirdParty: true
   InstanceProfile:
-    Type: 'AWS::IAM::InstanceProfile'
+    Type: "AWS::IAM::InstanceProfile"
     Properties:
       Roles:
         - Ref: InstanceRole
   Instance:
-    Type: 'AWS::EC2::Instance'
-    CreationPolicy:
+    Type: AWS::EC2::Instance
+    CreationPolicy: 
       ResourceSignal:
         Timeout: PT15M
         Count: 1
     Metadata:
       AWS::CloudFormation::Init:
         config:
-          packages:
+          packages: 
             yum:
-              ruby: []
+             ruby: []
+              #wget: []
+              #unzip: []
           files:
             /home/ec2-user/install:
-              source: !Sub 'https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install'
-              mode: '000755' # executable
+              source: !Sub "https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install"
+              mode: "000755" # executable
           commands:
             00-install-cd-agent:
-              command: './install auto'
-              cwd: '/home/ec2-user/'
+              command: "./install auto"
+              cwd: "/home/ec2-user/"
     Properties:
       ImageId: !Ref EC2AMI
       InstanceType: !Ref EC2InstanceType
       IamInstanceProfile: !Ref InstanceProfile
       Monitoring: true
       SecurityGroupIds:
-        - !GetAtt SecurityGroup.GroupId
+        - !GetAtt SecurityGroup.GroupId 
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -xe
 
           # send script output to /tmp so we can debug boot failures
-          exec > /tmp/userdata.log 2>&1
+          exec > /tmp/userdata.log 2>&1 
 
           # Update all packages
           yum -y update
@@ -222,7 +228,7 @@ Resources:
           # Get latest cfn scripts; https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/best-practices.html#cfninit
           yum install -y aws-cfn-bootstrap
 
-          cat > /tmp/install_script.sh << EOF
+          cat > /tmp/install_script.sh << EOF 
             # START
             echo "Setting up NodeJS Environment"
             curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
@@ -236,23 +242,35 @@ Resources:
             nvm install v12.7.0
             nvm use v12.7.0
 
+            # Download latest code, unzip it into /home/ec2-user/app
+            #wget https://github.com/{{Git_username}}/aws-bootstrap/archive/master.zip 
+            #unzip master.zip
+            #mv aws-bootstrap-master app
+
             # Create log directory
             mkdir -p /home/ec2-user/app/logs
+
+            # Run server
+            #cd app
+            #npm install
+            #npm start
           EOF
 
           chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
-          sleep 1; su - ec2-user -c "/tmp/install_script.sh"
+          sleep 1; sudo su - ec2-user -c "/tmp/install_script.sh" 
 
           # Have CloudFormation install any files and packages from the metadata
           /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
           # Signal to CloudFormation that the instance is ready
-          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
+          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance 
+          
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
+
 Outputs:
   InstanceEndpoint:
     Description: The DNS name for the created instance
-    Value: !Sub 'http://${Instance.PublicDnsName}:8080'
+    Value: !Sub "http://${Instance.PublicDnsName}:8080" 
     Export:
       Name: InstanceEndpoint
