--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node ./node_modules/pm2/bin/pm2 start ./server.js --name hello_aws --log logs/app.log ", 
-    "stop": "node ./node_modules/pm2/bin/pm2 stop hello_aws", 
+    "start": "node ./server.js", 
     "build": "echo 'Building...'"
-  },
-  "dependencies": { 
-    "pm2": "^4.2.0" 
   },
   "keywords": [],
   "author": "",
