--- a/main.yml
+++ b/main.yml
@@ -248,7 +248,7 @@ Resources:
             #mv aws-bootstrap-master app
 
             # Create log directory
-            mkdir -p /home/ec2-user/app/logs
+            mkdir -p /home/ec2-user/app/release/logs
 
             # Run server
             #cd app
