--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node ./node_modules/pm2/bin/pm2 start ./server.js --name hello_aws --log logs/app.log ", 
-    "stop": "node ./node_modules/pm2/bin/pm2 stop hello_aws", 
+    "stop": "node ./node_modules/pm2/bin/pm2 stop", 
     "build": "echo 'Building...'"
   },
   "dependencies": { 
