--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node ./node_modules/pm2/bin/pm2 start ./server.js --name hello_aws --log logs/app.log ", 
+    "start": "node ./node_modules/pm2/bin/pm2 start ./server.js --name hello_aws", 
     "stop": "node ./node_modules/pm2/bin/pm2 stop all", 
     "build": "echo 'Building...'"
   },
