--- a/main.yml
+++ b/main.yml
@@ -44,6 +44,7 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
+
   InstanceRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -58,9 +59,18 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchFullAccess
         - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
+      Policies:
+        - PolicyName: ec2DescribeTags
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: 'ec2:DescribeTags'
+                Resource: '*'
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
+
   DeploymentRole:
     Type: AWS::IAM::Role
     Properties:
@@ -82,6 +92,7 @@ Resources:
         - arn:aws:iam::aws:policy/AWSCodeDeployDeployerAccess
         - arn:aws:iam::aws:policy/AWSCodeBuildDeveloperAccess
         - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole
+
   BuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -95,11 +106,13 @@ Resources:
         Image: aws/codebuild/standard:2.0
       Source:
         Type: CODEPIPELINE
+
   DeploymentApplication:
     Type: AWS::CodeDeploy::Application
     Properties:
       ApplicationName: !Ref AWS::StackName
       ComputePlatform: Server
+
   StagingDeploymentGroup:
     Type: AWS::CodeDeploy::DeploymentGroup
     DependsOn: Instance
@@ -112,6 +125,7 @@ Resources:
         - Key: aws:cloudformation:stack-name
           Type: KEY_AND_VALUE
           Value: !Ref AWS::StackName
+
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
@@ -167,6 +181,7 @@ Resources:
                 ApplicationName: !Ref DeploymentApplication
                 DeploymentGroupName: !Ref StagingDeploymentGroup
               RunOrder: 1
+
   PipelineWebhook:
     Type: AWS::CodePipeline::Webhook
     Properties:
@@ -181,25 +196,50 @@ Resources:
       Name: !Sub 'webhook-${AWS::StackName}'
       TargetPipelineVersion: !GetAtt Pipeline.Version
       RegisterWithThirdParty: true
+
   InstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
     Properties:
       Roles:
         - Ref: InstanceRole
+
   Instance:
     Type: AWS::EC2::Instance
-    CreationPolicy: 
+    CreationPolicy:
       ResourceSignal:
-        Timeout: PT15M
+        Timeout: PT5M
         Count: 1
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateId: !Ref InstanceLaunchTemplate
+        Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
+
+  Instance2:
+    Type: AWS::EC2::Instance
+    CreationPolicy:
+      ResourceSignal:
+        Timeout: PT5M
+        Count: 1
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateId: !Ref InstanceLaunchTemplate
+        Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
+
+  InstanceLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Metadata:
       AWS::CloudFormation::Init:
         config:
-          packages: 
+          packages:
             yum:
-             ruby: []
-              #wget: []
-              #unzip: []
+              ruby: []
+              jq: []
           files:
             /home/ec2-user/install:
               source: !Sub "https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install"
@@ -209,68 +249,71 @@ Resources:
               command: "./install auto"
               cwd: "/home/ec2-user/"
     Properties:
-      ImageId: !Ref EC2AMI
-      InstanceType: !Ref EC2InstanceType
-      IamInstanceProfile: !Ref InstanceProfile
-      Monitoring: true
-      SecurityGroupIds:
-        - !GetAtt SecurityGroup.GroupId 
-      UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash -xe
+      LaunchTemplateName: !Sub 'LaunchTemplate_${AWS::StackName}'
+      LaunchTemplateData:
+        ImageId: !Ref EC2AMI
+        InstanceType: !Ref EC2InstanceType
+        IamInstanceProfile:
+          Arn: !GetAtt InstanceProfile.Arn
+        Monitoring:
+          Enabled: true
+        SecurityGroupIds:
+          - !GetAtt SecurityGroup.GroupId
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash -xe
 
-          # send script output to /tmp so we can debug boot failures
-          exec > /tmp/userdata.log 2>&1 
+            # send script output to /tmp so we can debug boot failures
+            exec > /tmp/userdata.log 2>&1 
 
-          # Update all packages
-          yum -y update
+            # Update all packages
+            yum -y update
 
-          # Get latest cfn scripts; https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/best-practices.html#cfninit
-          yum install -y aws-cfn-bootstrap
+            # Get latest cfn scripts; https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/best-practices.html#cfninit
+            yum install -y aws-cfn-bootstrap
+            
+            cat > /tmp/install_script.sh << EOF 
+              # START
+              echo "Setting up NodeJS Environment"
+              curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
 
-          cat > /tmp/install_script.sh << EOF 
-            # START
-            echo "Setting up NodeJS Environment"
-            curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+              # Dot source the files to ensure that variables are available within the current shell
+              . /home/ec2-user/.nvm/nvm.sh
+              . /home/ec2-user/.bashrc
 
-            # Dot source the files to ensure that variables are available within the current shell
-            . /home/ec2-user/.nvm/nvm.sh
-            . /home/ec2-user/.bashrc
+              # Install NVM, NPM, Node.JS
+              nvm alias default v12.7.0
+              nvm install v12.7.0
+              nvm use v12.7.0
 
-            # Install NVM, NPM, Node.JS
-            nvm alias default v12.7.0
-            nvm install v12.7.0
-            nvm use v12.7.0
+              # Create log directory
+              mkdir -p /home/ec2-user/app/logs
+            EOF
 
-            # Download latest code, unzip it into /home/ec2-user/app
-            #wget https://github.com/{{Git_username}}/aws-bootstrap/archive/master.zip 
-            #unzip master.zip
-            #mv aws-bootstrap-master app
+            chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
+            sleep 1; sudo su - ec2-user -c "/tmp/install_script.sh" 
 
-            # Create log directory
-            # mkdir -p /home/ec2-user/app/release/logs
+            # Have CloudFormation install any files and packages from the metadata
+            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource InstanceLaunchTemplate
 
-            # Run server
-            #cd app
-            #npm install
-            #npm start
-          EOF
+            # Query the EC2 metadata service for this instance's instance-id
+            export INSTANCE_ID="`wget -q -O - http://169.254.169.254/latest/meta-data/instance-id`"
 
-          chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
-          sleep 1; sudo su - ec2-user -c "/tmp/install_script.sh" 
+            # Query EC2 describeTags method and pull our the CFN Logical ID for this instance
 
-          # Have CloudFormation install any files and packages from the metadata
-          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
-          # Signal to CloudFormation that the instance is ready
-          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance 
-          
-      Tags:
-        - Key: Name
-          Value: !Ref AWS::StackName
+            export LOGICAL_ID=`aws --region ${AWS::Region} ec2 describe-tags --filters "Name=resource-id,Values=${!INSTANCE_ID}" "Name=key,Values=aws:cloudformation:logical-id" | jq -r ".Tags[0].Value"`
+
+            # Signal to CloudFormation that the instance is ready
+            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource ${!LOGICAL_ID}
 
 Outputs:
-  InstanceEndpoint:
+  InstanceEndpoint1:
     Description: The DNS name for the created instance
     Value: !Sub "http://${Instance.PublicDnsName}:8080" 
     Export:
-      Name: InstanceEndpoint
+      Name: InstanceEndpoint1
+  InstanceEndpoint2:
+    Description: The DNS name for the created instance
+    Value: !Sub "http://${Instance2.PublicDnsName}:8080" 
+    Export:
+      Name: InstanceEndpoint2
