Add a custom domain

--- a/main.yml
+++ b/main.yml
@@ -6,6 +6,8 @@ Parameters:
   EC2AMI:
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
     Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+  Domain:
+    Type: String
   CodePipelineBucket:
     Type: String
     Description: 'The S3 bucket for CodePipeline artifacts.'
@@ -179,20 +181,23 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: stage.yml
-      TimeoutInMinutes: 30 
+      TimeoutInMinutes: 30
       Parameters:
-        EC2InstanceType: !Ref EC2InstanceType 
+        EC2InstanceType: !Ref EC2InstanceType
         EC2AMI: !Ref EC2AMI
+        Domain: !Ref Domain 
+        SubDomain: staging 
 
   Prod:
     Type: AWS::CloudFormation::Stack
-    DependsOn: Staging 
     Properties:
       TemplateURL: stage.yml
       TimeoutInMinutes: 30
       Parameters:
         EC2InstanceType: !Ref EC2InstanceType
         EC2AMI: !Ref EC2AMI
+        Domain: !Ref Domain
+        SubDomain: prod 
 
 Outputs:
 
