--- a/stage.yml
+++ b/stage.yml
@@ -5,8 +5,21 @@ Parameters:
     Type: String
   EC2AMI:
     Type: String
+  Domain:
+    Type: String
+  SubDomain:
+    Type: String
 
 Resources:
+  DNS:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneName: !Sub '${Domain}.'
+      Name: !Sub '${SubDomain}.${Domain}.'
+      Type: A
+      AliasTarget:
+        HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID
+        DNSName: !GetAtt LoadBalancer.DNSName
   SecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
@@ -293,8 +306,8 @@ Resources:
 
 Outputs:
   LBEndpoint:
-    Description: The DNS name for the LB
-    Value: !Sub 'http://${LoadBalancer.DNSName}:80'
+    Description: The DNS name for the stage
+    Value: !Sub 'http://${DNS}'
   ScalingGroup:
     Description: The ScalingGroup for this stage
     Value: !Ref ScalingGroup
