--- a/main.yml
+++ b/main.yml
@@ -8,6 +8,9 @@ Parameters:
     Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
   Domain:
     Type: String
+  Certificate:
+    Type: String
+    Description: 'An existing ACM certificate ARN for your domain'
   CodePipelineBucket:
     Type: String
     Description: 'The S3 bucket for CodePipeline artifacts.'
@@ -185,8 +188,9 @@ Resources:
       Parameters:
         EC2InstanceType: !Ref EC2InstanceType
         EC2AMI: !Ref EC2AMI
-        Domain: !Ref Domain 
-        SubDomain: staging 
+        Domain: !Ref Domain
+        SubDomain: staging
+        Certificate: !Ref Certificate 
 
   Prod:
     Type: AWS::CloudFormation::Stack
@@ -197,18 +201,27 @@ Resources:
         EC2InstanceType: !Ref EC2InstanceType
         EC2AMI: !Ref EC2AMI
         Domain: !Ref Domain
-        SubDomain: prod 
+        SubDomain: prod
+        Certificate: !Ref Certificate 
 
 Outputs:
-
   StagingLBEndpoint:
-    Description: The DNS name for the staging LB 
-    Value: !GetAtt Staging.Outputs.LBEndpoint 
+    Description: The DNS name for the staging LB
+    Value: !GetAtt Staging.Outputs.LBEndpoint
     Export:
       Name: StagingLBEndpoint
-
+  StagingHTTPSLBEndpoint:
+    Description: The DNS name for the staging HTTPS LB
+    Value: !GetAtt Staging.Outputs.HTTPSEndpoint
+    Export:
+      Name: StagingHTTPSLBEndpoint
   ProdLBEndpoint:
     Description: The DNS name for the prod LB
     Value: !GetAtt Prod.Outputs.LBEndpoint
     Export:
       Name: ProdLBEndpoint
+  ProdHTTPSLBEndpoint: 
+    Description: The DNS name for the prod HTTPS LB
+    Value: !GetAtt Prod.Outputs.HTTPSEndpoint
+    Export:
+      Name: ProdHTTPSLBEndpoint
