--- a/stage.yml
+++ b/stage.yml
@@ -9,6 +9,9 @@ Parameters:
     Type: String
   SubDomain:
     Type: String
+  Certificate:
+    Type: String
+    Description: 'An existing ACM certificate ARN for subdomain.domain'
 
 Resources:
   DNS:
@@ -31,8 +34,16 @@ Resources:
           ToPort: 8080
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 8443
+          ToPort: 8443
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 22
@@ -187,7 +198,29 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
-
+  HTTPSLoadBalancerTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      TargetType: instance
+      Port: 8443
+      Protocol: HTTPS
+      VpcId: !Ref VPC
+      HealthCheckEnabled: true
+      HealthCheckProtocol: HTTPS
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
+  HTTPSLoadBalancerListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref HTTPSLoadBalancerTargetGroup
+      LoadBalancerArn: !Ref LoadBalancer
+      Certificates:
+        - CertificateArn: !Ref Certificate
+      Port: 443
+      Protocol: HTTPS
   ScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     UpdatePolicy:
@@ -216,6 +249,7 @@ Resources:
         Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber
       TargetGroupARNs:
         - !Ref LoadBalancerTargetGroup
+        - !Ref HTTPSLoadBalancerTargetGroup
       MetricsCollection:
         - Granularity: '1Minute'
           Metrics:
@@ -286,6 +320,12 @@ Resources:
 
               # Create log directory
               mkdir -p /home/ec2-user/app/logs
+
+              # Create a self-signed TLS certificate to communicate with the load balancer
+              mkdir -p /home/ec2-user/app/keys
+              cd /home/ec2-user/app/keys
+              openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 \ 
+                          -subj "/C=/ST=/L=/O=/CN=localhost" -keyout key.pem -out cert.pem
             EOF
 
             chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
@@ -311,3 +351,6 @@ Outputs:
   ScalingGroup:
     Description: The ScalingGroup for this stage
     Value: !Ref ScalingGroup
+  HTTPSEndpoint:
+    Description: The DNS name for the stage
+    Value: !Sub 'https://${DNS}'
